[package]
name = "gtd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.29.1"
tokio-stream = "0.1.14"
tonic = "0.9.2"
serde = { version = "1.0.164", features = ["derive"] }
norgopolis-protos = "0.3.0"
norgopolis-module = "0.1.1"
